welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:-6: error: Missing closing brace `}' assumed here
try {
^makes10:1: error: expected class or object definition
def makes10(a:Int, b:Int):Boolean = {
^